fixed landing page

--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.scss
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.scss
@@ -1,25 +1,35 @@
 .fixed-header {
-    border-radius: 8px;
-    background-color: white;
-    z-index: 1000; /* Make sure it's above other content */
-    padding: 10px 20px; /* Add padding to make the button look nice */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional shadow for separation */
-    margin-bottom: 15px;
-  }
+  border-radius: 8px;
+  background-color: white;
+  z-index: 1000; /* Make sure it's above other content */
+  padding: 10px 20px; /* Add padding to make the button look nice */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional shadow for separation */
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+}
+
   
-  .header-button {
-    background: #4CAF50;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 5px;
-  }
+  
+
+.header-button {
+  background: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.pi-video{
+  margin-right: 10px;
+
+}
   
   .hackathon-details-container {
     max-width: 1200px;
@@ -443,3 +453,5 @@
       max-height: 400px;
     }
   }
+
+  
