--- a/src/app/demo/components/landing/navbar/navbar.component.html
+++ b/src/app/demo/components/landing/navbar/navbar.component.html
@@ -67,6 +67,14 @@
                     <span>my evaluations</span>
                 </a>
             </li>
+
+            <li>
+                <a (click)="router.navigate(['/landing-hackathons'], {fragment: 'hackathons'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                    <span>Hackathons</span>
+                </a>
+            </li>
+
+
         </ul>
         <div class="flex justify-content-between lg:flex-row lg:align-items-center border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
             <div class="badge-icon ml-auto mr-1" *ngIf="user">
