--- a/src/app/demo/components/landing/navbar/navbar.component.html
+++ b/src/app/demo/components/landing/navbar/navbar.component.html
@@ -1,18 +1,13 @@
-<div class="surface-0 flex justify-content-center h-full">
-    <div id="home" class="landing-wrapper overflow-hidden w-full h-full">
-
 <div class="py-4 px-4 mx-0 md:mx-6 lg:mx-8 lg:px-8 flex align-items-center justify-content-between relative lg:static mb-3">
     <a (click)="navigateToLanding()" class="flex align-items-center">
         <img src="assets/layout/images/hackathonnetlogo.png" alt="Logo" height="50" class="mr-0 lg:mr-2">
     </a>
 
-    <a pRipple class="cursor-pointer block lg:hidden text-700" pStyleClass="@next" enterClass="hidden" leaveToClass="hidden" >
+    <a pRipple class="cursor-pointer block lg:hidden text-700" pStyleClass="@next" enterClass="hidden" leaveToClass="hidden">
         <i class="pi pi-bars text-4xl"></i>
     </a>
     <div class="align-items-center surface-0 flex-grow-1 justify-content-between hidden lg:flex absolute lg:static w-full left-0 px-6 lg:px-0 z-2" style="top:85%">
         <ul class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row cursor-pointer">
-          
-
             <li>
                 <a (click)="router.navigate(['/pages/landing'], {fragment: 'pricing'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                     <span>Pricing</span>
@@ -24,21 +19,27 @@
                 </a>
             </li>
 
-            <li>
-                <a (click)="router.navigate(['/prize-form'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
-                    <span>Add a prize</span>
-                </a>
-            </li>
-            <li>
-                <a (click)="router.navigate(['/sponsor-prizes'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
-                    <span>My prizes</span>
-                </a>
-            </li>
-            <li>
+            <!-- Show "Apply as a sponsor" only if user is NOT a sponsor -->
+            <li *ngIf="!isSponsor">
                 <a (click)="router.navigate(['/sponsor-application-form'], {fragment: 'pricing'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                     <span>Apply as a sponsor</span>
                 </a>
             </li>
+            
+            <!-- Show "My prizes" only if user IS a sponsor -->
+            <li *ngIf="isSponsor">
+                <a (click)="router.navigate(['/sponsor-prizes'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                    <span>My prizes</span>
+                </a>
+            </li>
+            
+            <!-- Show "Add a prize" only if user IS a sponsor -->
+            <li *ngIf="isSponsor">
+                <a (click)="router.navigate(['/prize-form'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                    <span>Add a prize</span>
+                </a>
+            </li>
+            
             <li>
                 <a (click)="router.navigate(['/sponsors-leaderboard'], {fragment: 'pricing'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                     <span>Sponsor Leaderboard</span>
@@ -78,11 +79,12 @@
                     class="p-button-rounded border-none ml-1 font-light line-height-2 bg-green-500 text-white"
                     *ngIf="user">
             </button>
-            <button pButton pRipple label="Login" class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
-            <button pButton pRipple label="Register" class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button>
+            <button pButton pRipple label="Login" 
+                    class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"
+                    *ngIf="!user"></button>
+            <button pButton pRipple label="Register" 
+                    class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"
+                    *ngIf="!user"></button>
         </div>
     </div>
-</div>
-
-</div>
 </div>
