--- a/src/app/demo/components/landing/navbar/navbar.component.html
+++ b/src/app/demo/components/landing/navbar/navbar.component.html
@@ -24,19 +24,23 @@
                 </a>
             </li>
 
-            <li>
+            <!-- Show "Add a prize" only if user IS a sponsor -->
+            <li *ngIf="isSponsor">
                 <a (click)="router.navigate(['/prize-form'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                     <span>Add a prize</span>
                 </a>
             </li>
-            <li>
-                <a (click)="router.navigate(['/sponsor-prizes'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
-                    <span>My prizes</span>
-                </a>
-            </li>
-            <li>
+             <!-- Show "Apply as a sponsor" only if user is NOT a sponsor -->
+             <li *ngIf="!isSponsor">
                 <a (click)="router.navigate(['/sponsor-application-form'], {fragment: 'pricing'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                     <span>Apply as a sponsor</span>
+                </a>
+            </li>
+            
+            <!-- Show "My prizes" only if user IS a sponsor -->
+            <li *ngIf="isSponsor">
+                <a (click)="router.navigate(['/sponsor-prizes'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                    <span>My prizes</span>
                 </a>
             </li>
             <li>
