added dynamic prize add specific to a hackathon+changed the display of sonsor prizes+removed add prize from navbar

--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.html
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.html
@@ -99,9 +99,15 @@
   <div class="back-button-container">
     <button pButton type="button" icon="pi pi-arrow-left" label="Back to List" routerLink="/landing-hackathons"></button>
   </div>
-  <button class="header-button" (click)="JoinLiveStream()"><i class="pi pi-video"></i>Join Live stream</button>
-  
+  <div class="header-actions">
+    <button class="header-button" (click)="JoinLiveStream()"><i class="pi pi-video"></i>Join Live stream</button>
+    <button *ngIf="isSponsor" pButton type="button" icon="pi pi-plus-circle" label="Add a Prize"
+            class="p-button-success header-button"
+            (click)="addPrize(hackathon?.id)">
+    </button>
+  </div>
 </div>
+
 
 <div *ngIf="hackathon as h" class="hackathon-details-container">
     <!-- Hero Section with Gradient Overlay -->
