--- a/src/app/demo/components/prize/sponsor-prizes/sponsor-prizes.component.html
+++ b/src/app/demo/components/prize/sponsor-prizes/sponsor-prizes.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="intro-text">
       <p *ngIf="sponsorInfo">Prizes sponsored by {{ sponsorInfo.companyName || 'your company' }}</p>
-      <p>Browse through our collection of prizes sponsored for various hackathons and competitions.</p>
+      <p>Here are the prizes you've sponsored for various hackathons and competitions. Manage and track your contributions below.</p>
     </div>
   </div>
 
