--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.scss
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.scss
@@ -9,7 +9,15 @@
   align-items: center;
 }
 
-  
+.badge-icon {
+    
+  img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+}
   
 
 .header-button {
