--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.scss
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.scss
@@ -9,6 +9,16 @@
   align-items: center;
 }
 
+.badge-icon {
+    
+  img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+}
+
 .search-container {
   display: flex;
   gap: 20px;
